slider overflow fixed

--- a/index.css
+++ b/index.css
@@ -201,13 +201,18 @@ body {
 }
 .slide {
   text-align: center;
+  margin-top: 50px;
+  overflow: hidden;
+  /*
   margin: 50px 0 0 -140px;
+  */
 }
 .slide img {
   width: 800px;
   height: auto;
   display: inline-block;
   vertical-align: middle;
+  margin-left: -280px;
 }
 .slide img + div {
   width: 300px;
